<resources>
    <string name="app_name">CenotesApp</string>
    <string name="button_test">Button test</string>
    <string name="menu_main_op_about">Acerca de</string>
    <string name="menu_main_op_settings">Configuración</string>
    <string name="menu_main_op_tutorial">Tutorial</string>
    <string name="menu_main_op_opinion">Opinión</string>
    <string name="action_add_new_cenote">Agregar cenote</string>
    <string name="action_add_new_cenote_desc">Agrega un cenote a la lista local</string>
    <string name="action_cenote_section_inactive">Llena correctamente la sección \"%1$s\" para habilitar</string>
    <string name="action_add_new_photo_cenote">Agregar foto del cenote</string>
    <string name="action_add_new_photo_cenote_desc">Agrega un foto para descibir gráficamente el cenote</string>
    <string name="label_input_required">* Obligatorio</string>
    <string name="label_input_automatic">** Se calculará automaticamente</string>
    <string name="button_save">Guardar</string>
    <string name="button_cancel">Cancelar</string>
    <string name="button_menu">Opciones</string>
    <string name="cenote_saved_list_title">Lista de cenotes guardados</string>
    <string name="cenote_saved_list_no_data">Sin datos aún</string>
    <string name="cenote_saved_item_name">Nombre del cenote</string>
    <string name="cenote_saved_item_detail">Detalle del cenote</string>
    <string name="cenote_saved_op_edit">Editar</string>
    <string name="cenote_saved_op_delete">Eliminar</string>
    <string name="cenote_saved_op_export">Exportar</string>
    <string name="cenote_section_list_title">Lista de secciones del cenote</string>
    <string name="cenote_section_item_name">Nombre de la sección</string>
    <string name="cenote_section_item_advance">0 / 10</string>
    <string name="cenote_section_general_title">Datos generales</string>
    <string name="cenote_section_general_desc">Esta sección permite recabar el nombre, domicilio, referencia geográfica del Cenote y los datos de quien colecta la información</string>
    <string name="cenote_section_general_form_cve">Clave del cenote **</string>
    <string name="cenote_section_general_form_name">Nombre *</string>
    <string name="cenote_section_general_form_address">Domicilio *</string>
    <string name="cenote_section_general_form_street1">Entre calle 1</string>
    <string name="cenote_section_general_form_street2">Entre calle 2</string>
    <string name="cenote_section_general_form_colonia">Colonia o ageb *</string>
    <string name="cenote_section_general_form_lng">Longitud **</string>
    <string name="cenote_section_general_form_lat">Latitud **</string>
    <string name="cenote_section_general_form_timestamp">Fecha de captura **</string>
    <string name="cenote_section_access_title">Accesibilidad</string>
    <string name="cenote_section_access_desc">Esta sección permite señalar el nivel de acceso al Cenote</string>
    <string name="cenote_section_access_form_access">Cenote accesible *</string>
    <string name="cenote_section_access_form_access_op1">Si</string>
    <string name="cenote_section_access_form_access_op2">No</string>
    <string name="cenote_section_access_form_type">Tipo de no accesibilidad *</string>
    <string name="cenote_section_access_form_type_op1">Propiedad privada</string>
    <string name="cenote_section_access_form_type_op2">Acceso complicado</string>
    <string name="cenote_section_access_form_desc">Descripción</string>
    <string name="cenote_section_access_note">Nota: Si se guarda como no accesible, se desactivarán las secciones Clasificación, Morfometría, Uso actual, Problemática del Sitio y Gestión</string>
    <string name="cenote_section_clasifi_title">Clasificación</string>
    <string name="cenote_section_clasifi_desc">Esta sección permite conocer la Génesis, Geoforma, Morfometría y Morfología del Cenote</string>
    <string name="cenote_section_clasifi_form_genesis">Génesis</string>
    <string name="cenote_section_clasifi_form_genesis_op1">Exokárstico</string>
    <string name="cenote_section_clasifi_form_genesis_op2">Antropogénico</string>
    <string name="cenote_section_clasifi_form_geoforma">Geoforma</string>
    <string name="cenote_section_clasifi_form_geoforma_op1">Dolina</string>
    <string name="cenote_section_clasifi_form_geoforma_op2">Uvala</string>
    <string name="cenote_section_clasifi_form_geoforma_op3">Polje</string>
    <string name="cenote_section_clasifi_form_type">Tipo</string>
    <string name="cenote_section_clasifi_form_type_op1">U</string>
    <string name="cenote_section_clasifi_form_type_op2">V</string>
    <string name="cenote_section_clasifi_form_type_op3">Hoya</string>
    <string name="cenote_section_clasifi_form_apertura">Apertura</string>
    <string name="cenote_section_clasifi_form_apertura_op1">Abierto a ras de suelo</string>
    <string name="cenote_section_clasifi_form_apertura_op2">Abierto a profundidad</string>
    <string name="cenote_section_clasifi_form_apertura_op3">Semiabierto</string>
    <string name="cenote_section_clasifi_form_apertura_op4">Cerrado</string>
    <string name="cenote_section_clasifi_form_agua">Cuerpo de Agua</string>
    <string name="cenote_section_clasifi_form_agua_op1">Inundado Total</string>
    <string name="cenote_section_clasifi_form_agua_op2">Inundado parcial</string>
    <string name="cenote_section_clasifi_form_agua_op3">Sin cuerpo de agua</string>
    <string name="cenote_section_morfo_title">Morfometría</string>
    <string name="cenote_section_morfo_desc">Sección creada para registrar las dimensiones físicas del Cenote</string>
    <string name="cenote_section_morfo_form_area">Área (m²)</string>
    <string name="cenote_section_morfo_form_perimetro">Perímetro (m)</string>
    <string name="cenote_section_morfo_form_profundidad">Profundidad (m)</string>
    <string name="cenote_section_morfo_form_semieje_mayor">Semieje Mayor (m) *</string>
    <string name="cenote_section_morfo_form_semieje_menor">Semieje Menor (m) *</string>
    <string name="cenote_section_morfo_form_elongacion">Índice de elongación **</string>
    <string name="cenote_section_morfo_note_elongacion_required">* Obligatorio para Índice de elongación</string>
    <string name="cenote_section_morfo_note_elongacion_reference">** Según Basso et al. 2013</string>
    <string name="cenote_section_uso_title">Uso actual</string>
    <string name="cenote_section_uso_desc">Se describe la condición actual del Cenote, en cuanto al uso que se le da y las características de su entorno</string>
    <string name="cenote_section_uso_form_uso_actual">Uso actual</string>
    <string name="cenote_section_uso_form_uso_actual_op1">Agrícola</string>
    <string name="cenote_section_uso_form_uso_actual_op2">Urbano</string>
    <string name="cenote_section_uso_form_uso_actual_op3">Industrial</string>
    <string name="cenote_section_uso_form_uso_actual_op4">Área Natural</string>
    <string name="cenote_section_uso_form_densidad_urbana">Densidad urbana (Construcciones por manzana)</string>
    <string name="cenote_section_uso_form_densidad_urbana_op1">Alta (más de 50)</string>
    <string name="cenote_section_uso_form_densidad_urbana_op2">Media (de 10 a 50)</string>
    <string name="cenote_section_uso_form_densidad_urbana_op3">Baja (menos de 10)</string>
    <string name="cenote_section_problem_desc">Señala si el cenote presenta algunas o varias de las siguientes problemáticas</string>
    <string name="cenote_section_problem_form_contaminacion">Contaminación del agua de subsuelo</string>
    <string name="cenote_section_problem_form_contaminacion_op1">Drenajes</string>
    <string name="cenote_section_problem_form_contaminacion_op2">Vertederos de agua no tratada</string>
    <string name="cenote_section_problem_form_contaminacion_op3">No presenta</string>
    <string name="cenote_section_problem_form_vertederos">Vertederos de residuos sólidos y agua residuales a cielo abierto</string>
    <string name="cenote_section_problem_form_vertederos_op1">Basureros</string>
    <string name="cenote_section_problem_form_vertederos_op2">Fosas sépticas</string>
    <string name="cenote_section_problem_form_vertederos_op3">Pozos clandestinos de agua</string>
    <string name="cenote_section_problem_form_vertederos_op4">No presenta</string>
    <string name="cenote_section_problem_form_movimientos">Movimientos diferenciales de terreno</string>
    <string name="cenote_section_problem_form_movimientos_op1">Hundimientos</string>
    <string name="cenote_section_problem_form_movimientos_op2">Subsidencias</string>
    <string name="cenote_section_problem_form_movimientos_op3">Sufusiones</string>
    <string name="cenote_section_problem_form_movimientos_op4">No presenta</string>
    <string name="cenote_section_problem_form_depresiones">Depresiones</string>
    <string name="cenote_section_problem_form_depresiones_op1">1–2</string>
    <string name="cenote_section_problem_form_depresiones_op2">2–3</string>
    <string name="cenote_section_problem_form_depresiones_op3">3–5</string>
    <string name="cenote_section_problem_form_depresiones_op4">No presenta</string>
    <string name="cenote_section_problem_form_visitas_masivas">Visitas masivas</string>
    <string name="cenote_section_problem_form_visitas_masivas_op1">SI</string>
    <string name="cenote_section_problem_form_visitas_masivas_op2">No</string>
    <string name="cenote_section_problem_form_usos_previos">Usos previos a la regulación</string>
    <string name="cenote_section_problem_form_usos_previos_op1">Compatible</string>
    <string name="cenote_section_problem_form_usos_previos_op2">No compatible</string>
    <string name="cenote_section_gestion_form_estado">Estado del cenote</string>
    <string name="cenote_section_gestion_form_estado_op1">Presenta viviendas sin servicio de agua potable o drenaje</string>
    <string name="cenote_section_gestion_form_estado_op2">Presenta viviendas conectadas al sistema de agua través de pozo</string>
    <string name="cenote_section_gestion_form_estado_op3">Existe reporte puntual de movimiento diferencial</string>
    <string name="cenote_section_gestion_form_estado_op4">Presenta regiones diferenciadas de población (depresiones)</string>
    <string name="cenote_section_gestion_form_estado_op5">Presenta cantidad excesiva de visitantes</string>
    <string name="cenote_section_gestion_form_estado_op6">Ausencia de regulación</string>
    <string name="cenote_section_gestion_form_respuesta">Respuesta a estado</string>
    <string name="cenote_section_gestion_form_respuesta_op1">Clausura</string>
    <string name="cenote_section_gestion_form_respuesta_op2">Regulación</string>
    <string name="cenote_section_gestion_form_respuesta_op3">Orientación de manejo</string>
    <string name="cenote_section_gestion_form_respuesta_op4">Inventario</string>
    <string name="cenote_section_gestion_form_respuesta_op5">Acciones de relleno</string>
    <string name="cenote_section_gestion_form_respuesta_op6">Nivelación y drenaje</string>
    <string name="cenote_section_gestion_form_respuesta_op7">Protección</string>
    <string name="cenote_section_gestion_form_respuesta_op8">Conservación</string>
    <string name="cenote_section_gestion_form_respuesta_op9">Aprovechamiento</string>
    <string name="cenote_section_gestion_form_respuesta_op10">Control de visitantes</string>
    <string name="cenote_section_gestion_form_agentes">Agentes reguladores</string>
    <string name="cenote_section_gestion_form_agentes_op1">PROFEPA</string>
    <string name="cenote_section_gestion_form_agentes_op2">DIR MPAL Desarrollo Urbano y Ambiente</string>
    <string name="cenote_section_gestion_form_agentes_op3">Protección civl</string>
    <string name="cenote_section_gestion_form_agentes_op4">DIR MPAL de Economía</string>
    <string name="cenote_section_gestion_form_agentes_op5">Todas las anteriores</string>
    <string name="cenote_section_gestion_form_agentes_op6">Otra</string>
</resources>