<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.cenotes.sections.CenoteSectionGestionFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/form_padding"
            android:layout_marginBottom="@dimen/form_margin">
            <TextView
                android:text="@string/cenote_section_uso_desc"
                style="@style/Style.NormalText.Desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                style="@style/Style.NormalCheckBoxGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/cenote_section_gestion_form_estado"
                    style="@style/Style.NormalFormLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <CheckBox
                    android:text="@string/cenote_section_gestion_form_estado_op1"
                    android:textAppearance="@style/Style.NormalFormValues"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <CheckBox
                    android:text="@string/cenote_section_gestion_form_estado_op2"
                    android:textAppearance="@style/Style.NormalFormValues"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <CheckBox
                    android:text="@string/cenote_section_gestion_form_estado_op3"
                    android:textAppearance="@style/Style.NormalFormValues"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <CheckBox
                    android:text="@string/cenote_section_gestion_form_estado_op4"
                    android:textAppearance="@style/Style.NormalFormValues"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <CheckBox
                    android:text="@string/cenote_section_gestion_form_estado_op5"
                    android:textAppearance="@style/Style.NormalFormValues"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <CheckBox
                    android:text="@string/cenote_section_gestion_form_estado_op6"
                    android:textAppearance="@style/Style.NormalFormValues"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                style="@style/Style.NormalCheckBoxGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/cenote_section_gestion_form_respuesta"
                    style="@style/Style.NormalFormLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <CheckBox
                    android:text="@string/cenote_section_gestion_form_respuesta_op1"
                    android:textAppearance="@style/Style.NormalFormValues"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <CheckBox
                    android:text="@string/cenote_section_gestion_form_respuesta_op2"
                    android:textAppearance="@style/Style.NormalFormValues"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <CheckBox
                    android:text="@string/cenote_section_gestion_form_respuesta_op3"
                    android:textAppearance="@style/Style.NormalFormValues"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <CheckBox
                    android:text="@string/cenote_section_gestion_form_respuesta_op4"
                    android:textAppearance="@style/Style.NormalFormValues"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <CheckBox
                    android:text="@string/cenote_section_gestion_form_respuesta_op5"
                    android:textAppearance="@style/Style.NormalFormValues"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <CheckBox
                    android:text="@string/cenote_section_gestion_form_respuesta_op6"
                    android:textAppearance="@style/Style.NormalFormValues"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <CheckBox
                    android:text="@string/cenote_section_gestion_form_respuesta_op7"
                    android:textAppearance="@style/Style.NormalFormValues"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <CheckBox
                    android:text="@string/cenote_section_gestion_form_respuesta_op8"
                    android:textAppearance="@style/Style.NormalFormValues"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <CheckBox
                    android:text="@string/cenote_section_gestion_form_respuesta_op9"
                    android:textAppearance="@style/Style.NormalFormValues"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <CheckBox
                    android:text="@string/cenote_section_gestion_form_respuesta_op10"
                    android:textAppearance="@style/Style.NormalFormValues"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                style="@style/Style.NormalCheckBoxGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/cenote_section_gestion_form_agentes"
                    style="@style/Style.NormalFormLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <CheckBox
                    android:text="@string/cenote_section_gestion_form_agentes_op1"
                    android:textAppearance="@style/Style.NormalFormValues"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <CheckBox
                    android:text="@string/cenote_section_gestion_form_agentes_op2"
                    android:textAppearance="@style/Style.NormalFormValues"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <CheckBox
                    android:text="@string/cenote_section_gestion_form_agentes_op3"
                    android:textAppearance="@style/Style.NormalFormValues"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <CheckBox
                    android:text="@string/cenote_section_gestion_form_agentes_op4"
                    android:textAppearance="@style/Style.NormalFormValues"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <CheckBox
                    android:text="@string/cenote_section_gestion_form_agentes_op5"
                    android:textAppearance="@style/Style.NormalFormValues"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <CheckBox
                    android:text="@string/cenote_section_gestion_form_agentes_op6"
                    android:textAppearance="@style/Style.NormalFormValues"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <Button
                android:id="@+id/btnSaveData"
                android:text="@string/button_save"
                style="@style/Style.ImportantButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>