<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.cenotes.sections.CenoteSectionProblemFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/form_padding"
            android:layout_marginBottom="@dimen/form_margin">
            <TextView
                android:text="@string/cenote_section_problem_desc"
                style="@style/Style.NormalText.Desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                style="@style/Style.NormalCheckBoxGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/cenote_section_problem_form_contaminacion"
                    style="@style/Style.NormalFormLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <CheckBox
                    android:text="@string/cenote_section_problem_form_contaminacion_op1"
                    android:textAppearance="@style/Style.NormalFormValues"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <CheckBox
                    android:text="@string/cenote_section_problem_form_contaminacion_op2"
                    android:textAppearance="@style/Style.NormalFormValues"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <CheckBox
                    android:text="@string/cenote_section_problem_form_contaminacion_op3"
                    android:textAppearance="@style/Style.NormalFormValues"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <RadioGroup
                style="@style/Style.NormalRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/cenote_section_problem_form_vertederos"
                    style="@style/Style.NormalFormLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <RadioButton
                    android:text="@string/cenote_section_problem_form_vertederos_op1"
                    android:textAppearance="@style/Style.NormalFormValues"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <RadioButton
                    android:text="@string/cenote_section_problem_form_vertederos_op2"
                    android:textAppearance="@style/Style.NormalFormValues"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <RadioButton
                    android:text="@string/cenote_section_problem_form_vertederos_op3"
                    android:textAppearance="@style/Style.NormalFormValues"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <RadioButton
                    android:text="@string/cenote_section_problem_form_vertederos_op4"
                    android:textAppearance="@style/Style.NormalFormValues"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </RadioGroup>

            <LinearLayout
                style="@style/Style.NormalCheckBoxGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/cenote_section_problem_form_movimientos"
                    style="@style/Style.NormalFormLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <CheckBox
                    android:text="@string/cenote_section_problem_form_movimientos_op1"
                    android:textAppearance="@style/Style.NormalFormValues"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <CheckBox
                    android:text="@string/cenote_section_problem_form_movimientos_op2"
                    android:textAppearance="@style/Style.NormalFormValues"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <CheckBox
                    android:text="@string/cenote_section_problem_form_movimientos_op3"
                    android:textAppearance="@style/Style.NormalFormValues"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <CheckBox
                    android:text="@string/cenote_section_problem_form_movimientos_op4"
                    android:textAppearance="@style/Style.NormalFormValues"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <RadioGroup
                style="@style/Style.NormalRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/cenote_section_problem_form_depresiones"
                    style="@style/Style.NormalFormLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <RadioButton
                    android:text="@string/cenote_section_problem_form_depresiones_op1"
                    android:textAppearance="@style/Style.NormalFormValues"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <RadioButton
                    android:text="@string/cenote_section_problem_form_depresiones_op2"
                    android:textAppearance="@style/Style.NormalFormValues"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <RadioButton
                    android:text="@string/cenote_section_problem_form_depresiones_op3"
                    android:textAppearance="@style/Style.NormalFormValues"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <RadioButton
                    android:text="@string/cenote_section_problem_form_depresiones_op4"
                    android:textAppearance="@style/Style.NormalFormValues"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </RadioGroup>

            <RadioGroup
                style="@style/Style.NormalRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/cenote_section_problem_form_visitas_masivas"
                    style="@style/Style.NormalFormLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <RadioButton
                    android:text="@string/cenote_section_problem_form_visitas_masivas_op1"
                    android:textAppearance="@style/Style.NormalFormValues"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <RadioButton
                    android:text="@string/cenote_section_problem_form_visitas_masivas_op2"
                    android:textAppearance="@style/Style.NormalFormValues"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </RadioGroup>

            <RadioGroup
                style="@style/Style.NormalRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/cenote_section_problem_form_usos_previos"
                    style="@style/Style.NormalFormLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <RadioButton
                    android:text="@string/cenote_section_problem_form_usos_previos_op1"
                    android:textAppearance="@style/Style.NormalFormValues"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <RadioButton
                    android:text="@string/cenote_section_problem_form_usos_previos_op2"
                    android:textAppearance="@style/Style.NormalFormValues"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </RadioGroup>

            <Button
                android:id="@+id/btnSaveData"
                android:text="@string/button_save"
                style="@style/Style.ImportantButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>